<resources>
    <string name="app_name">Lymbo</string>

    <string name="title_activity_choices">Log out</string>
    <string name="log_out">Log out</string>


    <!-- Strings related to login -->
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_driver">Map</string>
    <string name="car">Car</string>
    <string name="title_activity_admin">Lymbo</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="rider_choice">Rider Choice</string>
    <string name="driver_choice">Driver Choice</string>
    <string name="rider">Rider</string>
    <string name="driver">Driver</string>
    <string name="logo">Lymbo Logo</string>
    <string name="field_icon">Field Icon</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="choose_vehicle_signup">Choose your vehicle type</string>
    <string name="tuktuk_Image">Tuktuk Image</string>
    <string name="car_Image">Car Image</string>
    <string name="amjad_Image">Amjad Image</string>
    <string name="raksha">Raksha</string>
    <string name="amjad">Amjad</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="next">Next Button</string>
    <string name="distance_image">Distance Image</string>
    <string name="price_image">Price Image</string>
    <string name="duration_image">Duration Image</string>
    <string name="enter_phone">Enter your phone number</string>
    <string name="enter_phone_hint">Insert phone number</string>
    <string name="select_type">Select the type of vehicle</string>
    <string name="edit_phone_hint">Edit phone number</string>
    <string name="cancel_reason">Why did you cancel the request?</string>
    <string name="cancel_reason_1">Expensive price.</string>
    <string name="cancel_reason_2">No drivers available.</string>
    <string name="cancel_reason_3">Personal issue.</string>
    <string name="cancel_reason_4">Driver distance is too far.</string>
    <string name="cancel_reason_5">Car problems.</string>
    <string name="cancel_reason_6">Customer distance is too far.</string>
    <string name="distance_to_destination">"Distance to destination : "</string>
    <string name="duration_to_destination">"Duration to destination : "</string>
    <string name="choose_vehicle_type_price">" Choose vehicle type."</string>
</resources>
