
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg5"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.gailardia.lymbo.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:layout_height="150dp">

            <ImageView
                android:contentDescription="@string/logo"
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0"
                android:src="@drawable/logot2"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/choice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:orientation="horizontal"
            android:visibility="visible"
            android:weightSum="1">

            <ImageView
                android:contentDescription="@string/rider_choice"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:onClick="openMap"
                android:layout_weight="0.5"
                android:src="@drawable/boy"
                android:visibility="visible" />

            <ImageView
                android:contentDescription="@string/driver_choice"
                android:layout_width="60dp"
                android:layout_height="90dp"
                android:layout_weight="0.5"
                android:onClick="Dsignin"
                android:paddingTop="30dp"
                android:src="@drawable/car"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:weightSum="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:text="@string/rider"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#87f1f1f1"
                android:textSize="20sp"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_gravity="center"
                android:text="@string/driver"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#87f1f1f1"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="0dp" />
        </LinearLayout>
    </LinearLayout>

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/snackbarPosition"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"></android.support.design.widget.CoordinatorLayout>

    </RelativeLayout>
